Closed
Bug 56212
Opened 25 years ago
Closed 25 years ago
Double quoted text in outgoing mail is mangled
Categories
(Core :: DOM: Editor, defect, P1)
Core
DOM: Editor
Tracking
()
VERIFIED
FIXED
mozilla0.6
People
(Reporter: phil, Assigned: jst)
References
Details
(Keywords: regression, Whiteboard: [rtm++])
Using 2000-10-11-08 RTM branch build on NT
1. Open HTML mail compose window, and address to yourself
2. type "test" (with the quotes) in the body and send
Message contents:
<html><head></head><body>&quot;test&quot;<br>
</body></html>
Which is displayed in the mail reader as:
"double"
I'm guessing this is an editor output bug, so assigning to akkana
Comment 2•25 years ago
|
||
Phil: did you really type this:
"double"
or did Mozilla do more extra mangling here as well? If so, then we have a problem
in textareas.
Comment 3•25 years ago
|
||
cc jst. rtm+ing, because this breaks mail, and (by the looks of it) textareas.
Whiteboard: [rtm+]
Comment 4•25 years ago
|
||
This is easy to reproduce in the editor: type "hello" then do Output HTML.
The problem is only with quotes. Other entities, e.g. <, are handled okay, but
previously we output quotes without entity encoding, and now apparently we're
encoding quotes, and mail can't handle it. We don't need to encode quotes (it's
a legal character in an html file) and it makes the html src harder to read, so
we should stop doing it.
Status: NEW → ASSIGNED
| Reporter | ||
Comment 5•25 years ago
|
||
> Phil: did you really type this:
> "double"
Actually, I copied and pasted what was shown in the mail reader when receiving
that message, which was exactly those characters.
Comment 6•25 years ago
|
||
Johnny says he'll take this along with other entity fixes he's already working
on in his tree.
Assignee: akkana → jst
Status: ASSIGNED → NEW
Comment 7•25 years ago
|
||
What Akk said. mozITXTToHTMLConv::ScanTXT (used for URL recognition) does not
expect any entities other than those for <>&. Everything else will be escaped.
(This is well-doocumented.)
Comment 8•25 years ago
|
||
> ScanTXT (used for URL recognition)
eh, ScanHTML (used for URL recognition at sendind time)
Comment 9•25 years ago
|
||
We would really like to see the patch and review/super review really really
really soon now...
Whiteboard: [rtm+] → [rtm need info]
| Assignee | ||
Comment 10•25 years ago
|
||
Marking rtm++ per discussion with jar. I have sr= & r= and I'm about to check in
the fix.
Status: NEW → ASSIGNED
OS: Windows NT → All
Priority: P3 → P1
Hardware: PC → All
Whiteboard: [rtm need info] → [rtm++]
Target Milestone: --- → mozilla0.6
| Assignee | ||
Comment 11•25 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 12•25 years ago
|
||
puh! I'm very glad this fix made it into N6.
Comment 13•25 years ago
|
||
*** Bug 56454 has been marked as a duplicate of this bug. ***
Comment 14•25 years ago
|
||
verified on 10/19 branch build.
Status: RESOLVED → VERIFIED
Keywords: vtrunk
Comment 15•25 years ago
|
||
oops reopening to verify on trunk.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 16•25 years ago
|
||
Should still be fixed on the trunk, marking so...
Status: REOPENED → RESOLVED
Closed: 25 years ago → 25 years ago
Resolution: --- → FIXED
Comment 18•25 years ago
|
||
Removing vtrunk keyword to pull this off the needs verifying on trunk radar (and
because these keywords will go away soon)
Keywords: vtrunk
You need to log in
before you can comment on or make changes to this bug.
Description
•