Fixing rtm++ bug 56212. The new serializers were a bit too eager about what characters to encode as entities, this caused bad things when sending email that contained double quotes and also when writing a message containing quotes in AIM. sr=vidur, r=nisheeth.