layout/base/src/nsXMLContentSerializer.h
@@ -94,6 +94,7 @@ class nsXMLContentSerializer : public nsIContentSerializer {
 
   PRInt32 mPrefixIndex;
   nsVoidArray mNameSpaceStack;
+  PRBool mInAttribute;
 };
 
 extern nsresult NS_NewXMLContentSerializer(nsIContentSerializer** aSerializer);
